unpackaged/main/default/objects/Product2/fields/Add_Implementation_Service__c.field-meta.xml
<CustomField>
    <fullName>Add_Implementation_Service__c</fullName>
    <defaultValue>&quot;Add&quot;</defaultValue>
    <description>Indicates Product Action Type for the Product Rule. This specific field is used for Adding Implementation SKU automatically using a Product Rule, when a Product is added provided the Product Record has a lookup to the associated Implementation SKU</description>
    <inlineHelpText>Indicates Product Action Type for the Product Rule. This specific field is used for Adding Implementation SKU automatically using a Product Rule, when a Product is added provided the Product Record has a lookup to the associated Implementation SKU</inlineHelpText>
    <label>Add Implementation Service</label>
    <length>80</length>
    <type>Text</type>
</CustomField>