unpackaged/main/default/objects/Product2/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <label>Product Line</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Pro</fullName>
            </value>
            <value>
                <fullName>O&amp;M</fullName>
            </value>
            <value>
                <fullName>Bluepoint</fullName>
            </value>
            <value>
                <fullName>Add-ons</fullName>
            </value>
            <value>
                <fullName>Breeze Development</fullName>
            </value>
            <value>
                <fullName>Core Lite</fullName>
            </value>
            <value>
                <fullName>Ekho</fullName>
            </value>
            <value>
                <fullName>Edge Services</fullName>
            </value>
            <value>
                <fullName>Customer Success</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>