unpackaged/main/default/objects/Product2/fields/Requires_Implementation_SKU__c.field-meta.xml
<CustomField>
    <fullName>Requires_Implementation_SKU__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates that the Product needs implementation. This field is used by the Product Rule that automatically adds the Implementation SKU for this Product</description>
    <inlineHelpText>If checked, the Product Rule will automatically add the Implementation SKU for this Product to the Quote line</inlineHelpText>
    <label>Requires Implementation SKU</label>
    <type>Checkbox</type>
</CustomField>